fix overflow, add volta instead of nvm

--- a/components/Backdrop/_style.scss
+++ b/components/Backdrop/_style.scss
@@ -1,7 +1,7 @@
 .backdrop {
 	position: absolute;
-	height: 100%;
-	width: 100%;
+	height: calc(100% - var(--space-sm));
+	width: calc(100% - var(--space-sm));
 	transition: all .3s ease;
 }
 
